tosclusterv1.3/toscluster.template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "Email": {
            "defaultValue": "",
            "type": "String",
            "metadata": {
                "description": "用户邮箱，作为TOS Market帐号并用来接收账户和使用信息"
            }
        },
        "ClusterSize": {
            "defaultValue": 3,
            "type": "int",
            "metadata": {
                "description": "集群规模(虚拟机节点的数量)"
            }
        },
        "VmSize": {
            "defaultValue": "Standard_D3_v2",
            "type": "String",
            "metadata": {
                "description": "虚拟机类型"
            }
        },
        "StorageAccount": {
            "type": "String",
            "metadata": {
                "description": "存储账户名(请注意账户名需要在整个Azure Cloud全局唯一)"
            }
        },
        "Username": {
            "defaultValue": "tos",
            "type": "String",
            "metadata": {
                "description": "虚拟机用户"
            }
        },
        "Password": {
            "defaultValue": null,
            "type": "SecureString",
            "metadata": {
                "description": "虚拟机用户密码"
            }
        }
    },
    "variables": {
        "image_path": "https://tosstor.blob.core.chinacloudapi.cn/image/toscluster-tmpl.vhd",
        "cluster_name": "[concat('tos', uniqueString(subscription().subscriptionId, resourceGroup().id, deployment().name))]",
	"addressSpace": "192.168.0.0/16",
	"subnet": "192.168.0.0/18",
	"masterIP": "192.168.0.4",
        "storageAccounts_name": "[parameters('StorageAccount')]",
	"diskCaching": "ReadWrite",
	"sizeOfDataDisksInGB": 100,
        "networkInterfaces_prefix": "[variables('cluster_name')]",
        "networkSecurityGroups_name": "[variables('cluster_name')]",
        "publicIPAddresses_prefix": "[variables('cluster_name')]",
        "virtualNetworks_name": "[variables('cluster_name')]",
	"marketAddress": "market.chinaeast.cloudapp.chinacloudapi.cn",
	"marketPort": "80",
	"registryAddress": "market.chinaeast.cloudapp.chinacloudapi.cn",
	"registryPort": "5000",
	"masterExternalDN": "[concat(variables('cluster_name'), '-node-0', '.chinaeast.cloudapp.chinacloudapi.cn')]",
        "custom_data": "[concat('MARKET_ADDRESS=', variables('marketAddress'), '\n', 'MARKET_PORT=', variables('marketPort'), '\n', 'REGISTRY_ADDRESS=', variables('registryAddress'), '\n', 'REGISTRY_PORT=', variables('registryPort'), '\n', 'MASTER_EXTERNAL_ADDRESS=', variables('masterExternalDN'), '\n', 'MASTER_INTERNAL_ADDRESS=', variables('masterIP'), '\n', 'CLUSTER_ID=', variables('cluster_name'), '\n', 'USER_ID=', parameters('Email'), '\n', 'EMAIL=', parameters('Email'), '\n')]"
    },
    "resources": [
	{
            "comments": "Generalized from resource: '/subscriptions/0844084d-505e-4924-8306-42d6bb43cb58/resourceGroups/tostest/providers/Microsoft.Compute/virtualMachines/tostest'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[concat(variables('cluster_name'), '_node_', copyIndex())]",
            "apiVersion": "2015-06-15",
            "location": "chinaeast",
	    "copy": {
	        "name": "copyVirtualMachines", 
	        "count": "[parameters('ClusterSize')]"
	    },
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('VmSize')]"
                },
                "storageProfile": {
                    "osDisk": {
                        "name": "[concat(variables('cluster_name'), '_osDisk_', copyIndex())]",
			"osType": "linux",
                        "createOption": "FromImage",
			 "image": {
                            "uri": "[variables('image_path')]"
			},
                        "vhd": {
                            "uri": "[concat('https', '://', variables('storageAccounts_name'), '.blob.core.chinacloudapi.cn', concat('/vmdisks/', variables('cluster_name'), '-node-', copyIndex(), '-osDisk-', uniqueString(resourceGroup().id, deployment().name), '.vhd'))]"
                        },
                        "caching": "ReadWrite"
                    },
                    "dataDisks": [
			{
			    "name": "[concat(variables('cluster_name'), '-dataDisk-', '0')]",
			    "lun": 0,
			    "vhd": {
                                "uri": "[concat('https', '://', variables('storageAccounts_name'), '.blob.core.chinacloudapi.cn', concat('/vmdisks/', variables('cluster_name'), '-node-', copyIndex(), '-dataDisk-', uniqueString(resourceGroup().id, deployment().name), '.vhd'))]"
			    },
			    "createOption": "Empty",
			    "caching": "[variables('diskCaching')]",
			    "diskSizeGB": "[variables('sizeOfDataDisksInGB')]"
			}
		    ]
                },
                "osProfile": {
                    "computerName": "[concat(variables('cluster_name'), '-node-', copyIndex())]",
                    "adminUsername": "[parameters('Username')]",
                    "customData": "[base64(variables('custom_data'))]",
                    "secrets": [],
                    "adminPassword": "[parameters('Password')]"
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('networkInterfaces_prefix'), '_nic_', copyIndex()))]"
                        }
                    ]
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', variables('storageAccounts_name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('networkInterfaces_prefix'), '_nic_', copyIndex()))]"
            ]
        },
	{
            "comments": "Generalized from resource: '/subscriptions/0844084d-505e-4924-8306-42d6bb43cb58/resourceGroups/tostest/providers/Microsoft.Network/networkInterfaces/hwtest651'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[concat(variables('networkInterfaces_prefix'), '_nic_0')]",
            "apiVersion": "2016-03-30",
            "location": "chinaeast",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "['ipconfig0']",
                        "properties": {
                            "privateIPAddress": "[variables('masterIP')]",
                            "privateIPAllocationMethod": "Static",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', concat(variables('publicIPAddresses_prefix'), '_ip_0'))]"
                            },
                            "subnet": {
                                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworks_name')), '/subnets/default')]"
                            }
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroups_name'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', concat(variables('publicIPAddresses_prefix'), '_ip_0'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroups_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworks_name'))]"
            ]
        },
	{
            "comments": "Generalized from resource: '/subscriptions/0844084d-505e-4924-8306-42d6bb43cb58/resourceGroups/tostest/providers/Microsoft.Network/networkInterfaces/hwtest651'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[concat(variables('networkInterfaces_prefix'), '_nic_', add(copyIndex(), 1))]",
            "apiVersion": "2016-03-30",
            "location": "chinaeast",
	    "copy": {
	        "name": "copyNetworkInterfaces", 
	        "count": "[sub(parameters('ClusterSize'), 1)]"
	    },
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "[concat('ipconfig', add(copyIndex(), 1))]",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', concat(variables('publicIPAddresses_prefix'), '_ip_', add(copyIndex(), 1)))]"
                            },
                            "subnet": {
                                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworks_name')), '/subnets/default')]"
                            }
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroups_name'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('networkInterfaces_prefix'), '_nic_0'))]",
                "[resourceId('Microsoft.Network/publicIPAddresses', concat(variables('publicIPAddresses_prefix'), '_ip_', add(copyIndex(), 1)))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroups_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworks_name'))]"
            ]
        },
	{
            "comments": "Generalized from resource: '/subscriptions/0844084d-505e-4924-8306-42d6bb43cb58/resourceGroups/tostest/providers/Microsoft.Network/networkSecurityGroups/tostest'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('networkSecurityGroups_name')]",
            "apiVersion": "2016-03-30",
            "location": "chinaeast",
            "properties": {
                "securityRules": [
                    {
                        "name": "http",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1040,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "https",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1440,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "k8s-containers",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "30000-32767",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1540,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "default-allow-ssh",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1340,
                            "direction": "Inbound"
                        }
                    }
                ]
            },
            "dependsOn": []
        },
	{
            "comments": "Generalized from resource: '/subscriptions/0844084d-505e-4924-8306-42d6bb43cb58/resourceGroups/tostest/providers/Microsoft.Network/publicIPAddresses/tostest'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[concat(variables('publicIPAddresses_prefix'), '_ip_', copyIndex())]",
            "apiVersion": "2016-03-30",
            "location": "chinaeast",
	    "copy": {
	        "name": "copyPublicIPAddresses", 
	        "count": "[parameters('ClusterSize')]"
	    },
            "properties": {
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 4,
                "dnsSettings": {
                    "domainNameLabel": "[concat(variables('cluster_name'), '-node-', copyIndex())]"
                }
            },
            "dependsOn": []
        },
	{
            "comments": "Generalized from resource: '/subscriptions/0844084d-505e-4924-8306-42d6bb43cb58/resourceGroups/tostest/providers/Microsoft.Network/virtualNetworks/hwtest651'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[variables('virtualNetworks_name')]",
            "apiVersion": "2016-03-30",
            "location": "chinaeast",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('addressSpace')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "default",
                        "properties": {
                            "addressPrefix": "[variables('subnet')]"
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/0844084d-505e-4924-8306-42d6bb43cb58/resourceGroups/tostest/providers/Microsoft.Storage/storageAccounts/hwtest2373'.",
            "type": "Microsoft.Storage/storageAccounts",
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "kind": "Storage",
            "name": "[variables('storageAccounts_name')]",
            "apiVersion": "2016-01-01",
            "location": "chinaeast",
            "tags": {},
            "properties": {},
            "dependsOn": []
        }       
    ]
}
